--- a/travel-app/package.json
+++ b/travel-app/package.json
@@ -9,8 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
+    "@material-tailwind/react": "^2.1.10",
     "next": "15.3.2",
     "react": "^19.0.0",
+    "react-animated-heart": "^0.0.8",
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
